@@ -12,11 +12,9 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 public class Assets {
     private final String url;
@@ -40,16 +38,16 @@ public class Assets {
             var response = httpClient.send(request, HttpResponse.BodyHandlers.ofInputStream());
             var statusCode = response.statusCode();
             boolean succeeded = statusCode == 200;
-            if (succeeded){
+            if (succeeded) {
                 var jsonDocument = JsonDocument.of(response.body());
                 var jsonArray = JsonLd.expand(jsonDocument).get();
-                Asset asset  = new Asset(jsonArray.getJsonObject(0));
-                return new Result<Asset>(true, asset, null);
-            }
-            else {
-                String error = (statusCode == 400)?"Request body was malformed":"An asset with the given ID does not exist";
-                return new Result<Asset>(false, error);
-
+                Asset asset = new Asset(jsonArray.getJsonObject(0));
+                return new Result<>(true, asset, null);
+            } else {
+                String error = (statusCode == 400)
+                        ? "Request body was malformed"
+                        : "An asset with the given ID does not exist";
+                return new Result<>(false, error);
             }
         } catch (IOException | InterruptedException | JsonLdError e) {
             throw new RuntimeException(e);
@@ -183,12 +181,11 @@ public class Assets {
             if (statusCode == 200) {
                 var jsonDocument = JsonDocument.of(response.body());
                 var jsonArray = JsonLd.expand(jsonDocument).get();
-                List<Asset> assets = new ArrayList<>();
-                assets =
-                        jsonArray.stream().map(s -> new Asset(s.asJsonObject())).collect(Collectors.toList());
-                return new Result<List<Asset>>(true, assets, null);
+                var assets =
+                        jsonArray.stream().map(s -> new Asset(s.asJsonObject())).toList();
+                return new Result<>(true, assets, null);
             } else {
-                return new Result<List<Asset>>(false, "Request body was malformed");
+                return new Result<>(false, "Request body was malformed");
             }
 
         } catch (IOException | InterruptedException | JsonLdError e) {
